--- a/Fundraising/wwwroot/Proposal/test4.html
+++ b/Fundraising/wwwroot/Proposal/test4.html
@@ -29,7 +29,7 @@
                 .then(res => {
                     console.log(res.data);
                     if (res.data != "帳號密碼錯誤") {
-                        window.location="./proposal.html";
+                        window.location ="http://localhost:51701/Proposal/myproposal.html";
                     }
                 })
                 .catch(error => {
