--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -249,14 +249,14 @@
                     .then((value) => {
                         switch (value) {
                             case "確定":
-                                window.location = "http://localhost:51701/Proposal/test4.html";
+                                window.location = "https://localhost:44398/Proposal/test4.html";
                                 break;
                             case "取消":
                                 break;
                         }
                     });
             } else {
-                window.location = "http://localhost:51701/Proposal/proposal.html";
+                window.location = "https://localhost:44398/Proposal/proposal.html";
             }
         }
     </script>
