--- a/Fundraising/wwwroot/MemberCentre/UserInfo.html
+++ b/Fundraising/wwwroot/MemberCentre/UserInfo.html
@@ -50,9 +50,9 @@
         <h5 class="ms-4 mt-3">個人頁面</h5>
       </div>
       <div class="card mx-auto mt-3" id="app">
-        <div class="mx-auto mt-4 d-flex" style="width: 75%">
+        <div class="mx-auto mt-4 d-flex" style="width: 65%">
           <img
-            src="../img/PersonalPhoto.jpg"
+            :src="userdata.userPhoto"
             alt="PersonalPhoto"
             class="rounded-circle"
             id="ProfileImg"
