--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./message.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./message.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
+      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -24,6 +31,26 @@
     <title>聯絡訊息</title>
   </head>
   <body>
+    <div id="app">
+      <form>
+        <label for="userid-input">userid:</label>
+        <input type="text" v-model="userid" id="userid-input" />
+        <button type="button" @click="connect">連接</button>
+      </form>
+      <form>
+        <label for="user-input">to:</label>
+        <input type="text" v-model="touser" id="user-input" />
+        <br />
+        <label for="message-input">訊息:</label>
+        <input type="text" v-model="message" id="message-input" />
+        <br />
+        <button type="button" @click="sendToUser">傳送給特定使用者</button>
+      </form>
+      <div id="messages">
+        <p v-for="m in messages">{{ m }}</p>
+      </div>
+    </div>
+
     <div class="container">
       <div class="mx-auto" style="width: 80%">
         <h5 class="ms-4 mt-3">聯絡訊息</h5>
@@ -63,114 +90,6 @@
                     <div class="name">戴夫</div>
                     <div class="status">
                       <p>1天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
                     </div>
                   </div>
                 </li>
@@ -269,6 +188,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="../layout/membercentre_layout.js"></script>
+    <script src="../lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="./Js_src/message.js"></script>
   </body>
 </html>
