--- a/Fundraising/wwwroot/MemberCentre/UserOrder.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrder.html
@@ -11,19 +11,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
       integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -36,8 +31,8 @@
     </style>
     <title>訂單紀錄</title>
   </head>
-  <body id="app">
-    <div class="container">
+  <body>
+    <div class="container" id="app">
       <div class="mx-auto ps-4 pt-3" style="width: 80%">
         <h5>贊助紀錄</h5>
         <p style="font-size: 0.9rem">
@@ -208,63 +203,67 @@
           尚未贊助任何專案。
         </h2>
       </div>
-    </div>
-
-    <div
-      class="modal fade"
-      id="cancelform"
-      tabindex="-1"
-      aria-hidden="true"
-      ref="box"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">取消贊助申請</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <form>
-            <div class="modal-body">
-              <div class="mb-3">
-                <label for="message-text" class="col-form-label"
-                  >取消原因:</label
-                >
-                <textarea
-                  class="form-control"
-                  id="cancelresult"
-                  placeholder="請輸入取消原因"
-                  required
-                  v-model="cancelform.RefundResult"
-                ></textarea>
-              </div>
-            </div>
-            <div class="modal-footer">
+      <div
+        class="modal fade"
+        id="cancelform"
+        tabindex="-1"
+        aria-hidden="true"
+        ref="box"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">取消贊助申請</h5>
               <button
                 type="button"
-                @click="confirmCancel"
-                class="btn btn-success"
-              >
-                確認送出
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
+                class="btn-close"
                 data-bs-dismiss="modal"
-              >
-                關閉
-              </button>
+                aria-label="Close"
+              ></button>
             </div>
-          </form>
+            <form>
+              <div class="modal-body">
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label"
+                    >取消原因:</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="cancelresult"
+                    placeholder="請輸入取消原因"
+                    required
+                    v-model="cancelform.RefundResult"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  @click="confirmCancel"
+                  class="btn btn-success"
+                >
+                  確認送出
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  關閉
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </body>
-
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"
+  ></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../layout/membercentre_layout.js"></script>
   <script src="./Js_src/UserOrder.js"></script>
 </html>
