--- a/Fundraising/wwwroot/MemberCentre/UserOrder.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrder.html
@@ -40,170 +40,175 @@
           在專案募資完成之前，您都可修改你的回饋寄送資訊。
         </p>
       </div>
+
+      <!-- card -->
       <div id="OrderCard">
         <!-- 每筆訂單 -->
-        <div
-          class="card mx-auto mt-3 shadow-sm px-2"
-          v-for="order in ordercard"
-        >
-          <div class="row g-0">
-            <!-- 照片 -->
-            <div class="col-md-3">
-              <a href="#"
-                ><img
-                  :src="order.coverphoto"
-                  class="img-fluid rounded-start"
-                  alt="..."
-              /></a>
-            </div>
-
-            <!-- 資訊 -->
-            <div class="pb-0 pt-2 col-md-9">
-              <div class="d-flex justify-content-between me-2">
-                <p class="text-muted mb-0">贊助日期: {{order.purchaseTime}}</p>
-                <p class="text-muted mb-0">
-                  募資期間: {{order.startTime}} ~ {{order.endTime}}
-                </p>
+        <div v-if="ordercard.length!=0">
+          <div
+            class="card mx-auto mt-3 shadow-sm px-2"
+            v-for="order in ordercard"
+          >
+            <div class="row g-0">
+              <!-- 照片 -->
+              <div class="col-md-3">
+                <a href="#"
+                  ><img
+                    :src="order.coverphoto"
+                    class="img-fluid rounded-start"
+                    alt="..."
+                /></a>
               </div>
-              <!-- 標題 -->
-              <a
-                href="#"
-                class="card-title h4"
-                style="text-decoration: none; color: #212529"
-              >
-                {{order.productTitle}}
-              </a>
-              <hr class="m-1" />
-              <div class="mt-2">
-                <!-- 選擇的方案 -->
-                <h5 class="mb-1">{{order.planTitle}}</h5>
+
+              <!-- 資訊 -->
+              <div class="pb-0 pt-2 col-md-9">
                 <div class="d-flex justify-content-between me-2">
-                  <p class="mb-1 my-auto" style="max-width: 75%">
-                    內含 : {{order.planContent}}
+                  <p class="text-muted mb-0">
+                    贊助日期: {{order.purchaseTime}}
                   </p>
-                  <p class="mb-1 my-auto" style="max-width: 25%">
-                    $ {{order.planPrice}}
-                  </p>
-                </div>
-                <div class="d-flex justify-content-between me-2">
-                  <p class="mb-1 my-auto">---額外贊助</p>
-                  <p class="mb-1 my-auto border-bottom">
-                    $ {{order.addSponsorship}}
+                  <p class="text-muted mb-0">
+                    募資期間: {{order.startTime}} ~ {{order.endTime}}
                   </p>
                 </div>
-                <h5 class="text-end me-2 text-decoration-underline mt-1">
-                  贊助金額: $ {{order.planPrice + order.addSponsorship}}
-                </h5>
-              </div>
-            </div>
-
-            <div class="col-md-12 row g-0 pb-2 justify-content-end">
-              <!-- stepper success-->
-              <div
-                class="stepper mb-md-3"
-                v-if="order.orderStateId==1 && !(new Date(order.endTime) < new Date() && order.targetAmount > order.currentAmount )"
-              >
-                <div
-                  class="step"
-                  :class="{active:order.orderStateId==1 && new Date(order.endTime) > new Date(),completed:order.orderStateId>1 || new Date(order.endTime) < new Date()}"
+                <!-- 標題 -->
+                <a
+                  href="#"
+                  class="card-title h4"
+                  style="text-decoration: none; color: #212529"
                 >
-                  <div class="step-label"></div>
-                  <div class="step-description">募資中</div>
-                </div>
-                <div
-                  class="step"
-                  :class="{active:order.orderStateId==1 && new Date(order.endTime) < new Date(),completed:order.orderStateId > 1}"
-                >
-                  <div class="step-label"></div>
-                  <div class="step-description">募資成功</div>
-                </div>
-                <div
-                  class="step"
-                  :class="{active:order.orderStateId==2,completed:order.orderStateId>2}"
-                >
-                  <div class="step-label"></div>
-                  <div class="step-description">生產階段</div>
-                </div>
-                <div class="step" :class="{active:order.orderStateId==3}">
-                  <div class="step-label"></div>
-                  <div class="step-description">寄送產品</div>
+                  {{order.productTitle}}
+                </a>
+                <hr class="m-1" />
+                <div class="mt-2">
+                  <!-- 選擇的方案 -->
+                  <h5 class="mb-1">{{order.planTitle}}</h5>
+                  <div class="d-flex justify-content-between me-2">
+                    <p class="mb-1 my-auto" style="max-width: 75%">
+                      內含 : {{order.planContent}}
+                    </p>
+                    <p class="mb-1 my-auto" style="max-width: 25%">
+                      $ {{order.planPrice}}
+                    </p>
+                  </div>
+                  <div class="d-flex justify-content-between me-2">
+                    <p class="mb-1 my-auto">---額外贊助</p>
+                    <p class="mb-1 my-auto border-bottom">
+                      $ {{order.addSponsorship}}
+                    </p>
+                  </div>
+                  <h5 class="text-end me-2 text-decoration-underline mt-1">
+                    贊助金額: $ {{order.planPrice + order.addSponsorship}}
+                  </h5>
                 </div>
               </div>
 
-              <!-- stepper fail-->
-              <div
-                class="stepper mb-md-3"
-                v-if="order.orderStateId==6 || (new Date(order.endTime) < new Date() && order.targetAmount > order.currentAmount &&order.orderStateId==1)"
-              >
-                <div class="step completed">
-                  <div class="step-label"></div>
-                  <div class="step-description">募資中</div>
-                </div>
+              <div class="col-md-12 row g-0 pb-2 justify-content-end">
+                <!-- stepper success-->
                 <div
-                  class="step"
-                  :class="{active:order.orderStateId==1 && new Date(order.endTime) < new Date(),completed:order.orderStateId > 1}"
+                  class="stepper mb-md-3"
+                  v-if="order.orderStateId<4 && !(new Date(order.endTime) < new Date() && order.targetAmount > order.currentAmount )"
                 >
-                  <div class="step-label"></div>
-                  <div class="step-description">募資未達標</div>
+                  <div
+                    class="step"
+                    :class="{active:order.orderStateId==1 && new Date(order.endTime) > new Date(),completed:order.orderStateId>1 || new Date(order.endTime) < new Date()}"
+                  >
+                    <div class="step-label"></div>
+                    <div class="step-description">募資中</div>
+                  </div>
+                  <div
+                    class="step"
+                    :class="{active:order.orderStateId==1 && new Date(order.endTime) < new Date(),completed:order.orderStateId > 1}"
+                  >
+                    <div class="step-label"></div>
+                    <div class="step-description">募資成功</div>
+                  </div>
+                  <div
+                    class="step"
+                    :class="{active:order.orderStateId==2,completed:order.orderStateId>2}"
+                  >
+                    <div class="step-label"></div>
+                    <div class="step-description">生產階段</div>
+                  </div>
+                  <div class="step" :class="{active:order.orderStateId==3}">
+                    <div class="step-label"></div>
+                    <div class="step-description">寄送產品</div>
+                  </div>
                 </div>
-                <div class="step" :class="{active:order.orderStateId==6}">
-                  <div class="step-label"></div>
-                  <div class="step-description">退款完成</div>
-                </div>
-              </div>
 
-              <!-- stepper cancel-->
-              <div
-                class="stepper mb-md-3"
-                v-if="order.orderStateId==4 || order.orderStateId==5"
-              >
-                <div class="step completed">
-                  <div class="step-label"></div>
-                  <div class="step-description">募資中</div>
-                </div>
+                <!-- stepper fail-->
                 <div
-                  class="step"
-                  :class="{active:order.orderStateId==4,completed:order.orderStateId==5}"
+                  class="stepper mb-md-3"
+                  v-if="order.orderStateId==6 || (new Date(order.endTime) < new Date() && order.targetAmount > order.currentAmount &&order.orderStateId==1)"
                 >
-                  <div class="step-label"></div>
-                  <div class="step-description">申請取消贊助</div>
+                  <div class="step completed">
+                    <div class="step-label"></div>
+                    <div class="step-description">募資中</div>
+                  </div>
+                  <div
+                    class="step"
+                    :class="{active:order.orderStateId==1 && new Date(order.endTime) < new Date(),completed:order.orderStateId > 1}"
+                  >
+                    <div class="step-label"></div>
+                    <div class="step-description">募資未達標</div>
+                  </div>
+                  <div class="step" :class="{active:order.orderStateId==6}">
+                    <div class="step-label"></div>
+                    <div class="step-description">退款完成</div>
+                  </div>
                 </div>
-                <div class="step" :class="{active:order.orderStateId==5}">
-                  <div class="step-label"></div>
-                  <div class="step-description">退款完成</div>
+
+                <!-- stepper cancel-->
+                <div
+                  class="stepper mb-md-3"
+                  v-if="order.orderStateId==4 || order.orderStateId==5"
+                >
+                  <div class="step completed">
+                    <div class="step-label"></div>
+                    <div class="step-description">募資中</div>
+                  </div>
+                  <div
+                    class="step"
+                    :class="{active:order.orderStateId==4,completed:order.orderStateId==5}"
+                  >
+                    <div class="step-label"></div>
+                    <div class="step-description">申請取消贊助</div>
+                  </div>
+                  <div class="step" :class="{active:order.orderStateId==5}">
+                    <div class="step-label"></div>
+                    <div class="step-description">退款完成</div>
+                  </div>
                 </div>
+                <!-- button -->
+                <a
+                  href="./UserMessage.html"
+                  class="col-md-2 btn btn-outline-success me-md-2 mt-1"
+                >
+                  聯絡提案人
+                </a>
+                <a
+                  href="./UserOrderDetail.html"
+                  @click="ordersession(order.orderId)"
+                  class="col-md-2 btn btn-success me-md-2 mt-1"
+                  v-if="order.orderStateId==1 && new Date(order.endTime) > new Date()"
+                >
+                  修改寄送資訊
+                </a>
+                <button
+                  class="col-md-1 btn btn-default me-md-2 mt-1"
+                  v-if="order.orderStateId==1 && new Date(order.endTime) > new Date()"
+                  data-bs-toggle="modal"
+                  data-bs-target="#cancelform"
+                  :data-bs-whatever="order.orderId"
+                >
+                  取消
+                </button>
               </div>
-              <!-- button -->
-              <a
-                href="./UserMessage.html"
-                class="col-md-2 btn btn-outline-success me-md-2 mt-1"
-              >
-                聯絡提案人
-              </a>
-              <a
-                href="./UserOrderDetail.html"
-                @click="ordersession(order.orderId)"
-                class="col-md-2 btn btn-success me-md-2 mt-1"
-                v-if="order.orderStateId==1 && new Date(order.endTime) > new Date()"
-              >
-                修改寄送資訊
-              </a>
-              <button
-                class="col-md-1 btn btn-default me-md-2 mt-1"
-                v-if="order.orderStateId==1 && new Date(order.endTime) > new Date()"
-                data-bs-toggle="modal"
-                data-bs-target="#cancelform"
-                :data-bs-whatever="order.orderId"
-              >
-                取消
-              </button>
             </div>
           </div>
         </div>
+
         <!-- 若未曾贊助 -->
-        <h2 v-if="ordercard.length==0" class="text-center mt-5">
-          尚未贊助任何專案。
-        </h2>
+        <h2 v-else class="text-center mt-5">尚未贊助任何專案。</h2>
       </div>
 
       <!-- 彈出式取消表單 -->
@@ -261,13 +266,14 @@
         </div>
       </div>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="../layout/membercentre_layout.js"></script>
+    <script src="./Js_src/UserOrder.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../layout/membercentre_layout.js"></script>
-  <script src="./Js_src/UserOrder.js"></script>
 </html>
