--- a/Fundraising/wwwroot/MainPage/MainPage.html
+++ b/Fundraising/wwwroot/MainPage/MainPage.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/features/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../layout/layout2.css">
-    <link rel="stylesheet" href="../layout/footer.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <style>
         /* external css: flickity.css */
@@ -45,14 +45,13 @@
             counter-increment: gallery-cell;
         }
 
-        .gallery-cell img {
-            max-width: 100%;
-            height: 500px;
-        }
+            .gallery-cell img {
+                max-width: 100%;
+                height: 500px;
+            }
 
         .selectedimg {
             max-width: 100%;
-
             max-height: 100%;
         }
 
@@ -535,13 +534,7 @@
         </div>
     </div>
     <div class="footerpage"></div>
-
-    <script>
-        $(document).ready(function () {
-            $(".headerpage").load("../layout/layout2.html");
-            $(".footerpage").load("../layout/footer.html");
-        })
-    </script>
+    <script src="../layout/layout.js"></script>
 </body>
 
 </html>
