--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -249,7 +249,7 @@
                     .then((value) => {
                         switch (value) {
                             case "確定":
-                                window.location = "https://localhost:44398/Proposal/test4.html";
+                                window.location = "https://localhost:44398/Login/login.html";
                                 break;
                             case "取消":
                                 break;
